--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,11 @@
 			<br/>
 	
 			<div>
-				<input type="button" value="Gostaria de criar a minha conta de usuário" onClick="location.href='clienteCadastro.html';"/>
+			
+				<form method="GET" th:action="@{/public/custumer/new}">
+					<input type="submit" value="Gostaria de criar a minha conta de cliente"/>
+				</form>
+				
 				<br/>
 				<input type="button" value="Gostaria de criar a minha conta de restaurante" onClick="location.href='restauranteCadastro.html';"/>
 			</div>
