--- a/src/main/resources/static/css/bf_estiloSistema.css
+++ b/src/main/resources/static/css/bf_estiloSistema.css
@@ -44,6 +44,7 @@ h1{
 	width: 400px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 20px;
 }
 
 #error-message,
@@ -53,6 +54,7 @@ h1{
 
 	margin-right: auto;
 	margin-left: auto;
+	margin-bottom: 10px;
 	padding: 10px;
 
 	border-radius: 10px;
