--- a/src/main/resources/templates/cliente-cadastro.html
+++ b/src/main/resources/templates/cliente-cadastro.html
@@ -22,7 +22,7 @@
 							<input type="hidden" th:field="*{id}"/>
 						
 							<label for="name">Nome:</label>
-							<br/><input type="text" id="name" name="name" placeholder="Nome..." th:field="*{name}" th:classappend="${#fields.hasErrors('name')} ? 'input-error' : ''"/>	
+							<br/><input type="text" id="name" name="name" placeholder="Nome..."th:field="*{name}" th:classappend="${#fields.hasErrors('name')} ? 'input-error' : ''"/>	
 							<br/><br/>
 							
 							<div id="error-message" th:if="${#fields.hasErrors('name')}">
@@ -30,7 +30,7 @@
 							</div>
 	
 							<label for="cpf">CPF:</label>
-							<br/><input type="text" id="cpf" name="cpf" placeholder="CPF..." th:field="*{cpf}" th:classappend="${#fields.hasErrors('cpf')} ? 'input-error' : ''"/>	
+							<br/><input type="text" id="cpf" name="cpf" placeholder="CPF..." onKeyPress="return isNumberKey(event);" th:field="*{cpf}" th:classappend="${#fields.hasErrors('cpf')} ? 'input-error' : ''"/>	
 							<br/><br/>
 							
 							<div id="error-message" th:if="${#fields.hasErrors('cpf')}">
@@ -46,7 +46,7 @@
 							</div>
 	
 							<label for="phone">Telefone:</label>
-							<br/><input type="text" id="phone" name="phone" placeholder="Telefone..." th:field="*{phone}" th:classappend="${#fields.hasErrors('phone')} ? 'input-error' : ''"/>	
+							<br/><input type="text" id="phone" name="phone" placeholder="Telefone..." onKeyPress="return isNumberKey(event);" th:field="*{phone}" th:classappend="${#fields.hasErrors('phone')} ? 'input-error' : ''"/>	
 							<br/><br/>
 							
 							<div id="error-message" th:if="${#fields.hasErrors('phone')}">
@@ -54,7 +54,7 @@
 							</div>
 	
 							<label for="cep">CEP:</label>
-							<br/><input type="text" id="cep" name="cep" placeholder="CEP..." th:field="*{cep}" th:classappend="${#fields.hasErrors('cep')} ? 'input-error' : ''"/>	
+							<br/><input type="text" id="cep" name="cep" placeholder="CEP..." onKeyPress="return isNumberKey(event);" th:field="*{cep}" th:classappend="${#fields.hasErrors('cep')} ? 'input-error' : ''"/>	
 							<br/><br/>
 							
 							<div id="error-message" th:if="${#fields.hasErrors('cep')}">
