--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,6 +9,7 @@
 		<meta name="descripton" content="BlueFood, plataforma de comida em delivery"/>
 		<meta name="keywords" content="BlueFood, Comida, Restaurante, Delivery"/>
 		<link rel="stylesheet" type="text/css" th:href="@{/css/bf_estiloSistema.css}"/>
+		<script type="text/javascript" th:src="@{/js/scripts.js}"></script>
 		<title>BlueFood</title>
 	</head>
 	<body>
