Adicionado entidade restaurante.
Incluido também todas as demais classes necessarias para trablhar com
essa entidade e tambem a tela de cadastro da mesma.

--- a/src/main/resources/templates/cliente-cadastro.html
+++ b/src/main/resources/templates/cliente-cadastro.html
@@ -16,7 +16,7 @@
 				<br/>
 	
 				<div>
-					<form method="post" th:object="${custumer}" th:action="${!isEditMode} ? @{/public/custumer/save} : @{/custumer/save}">
+					<form method="POST" th:object="${custumer}" th:action="${!isEditMode} ? @{/public/custumer/save} : @{/custumer/save}">
 						<fieldset>
 							
 							<input type="hidden" th:field="*{id}"/>
