--- a/src/main/resources/templates/restaurante-cadastro.html
+++ b/src/main/resources/templates/restaurante-cadastro.html
@@ -8,30 +8,56 @@
 		<div layout:fragment="content">
 			<div>
 				<h1>Cadastro de Restaurante</h1>	
+				
+				<div id="success-message" th:if="${msg} != null">
+					<span th:text="${msg}"></span>
+				</div>
+	
+				<br/>
 	
 				<div>
-					<form method="POST" th:action="@{/public/restaurant/save}">
+					<form method="POST" th:object="${restaurant}" th:action="@{/public/restaurant/save}">
 						<fieldset>
 							<label for="name">Nome do Restaurante:</label>
-							<br/><input type="text" id="name" name="name" placeholder="Nome..."/>	
+							<br/><input type="text" id="name" name="name" placeholder="Nome..." th:field="*{name}" th:classappend="${#fields.hasErrors('name')} ? 'input-error' : ''"/>	
 							<br/><br/>
+		
+							<div id="error-message" th:if="${#fields.hasErrors('name')}">
+								<span th:errors="*{name}"></span>
+							</div>
 	
 							<label for="cnpj">CNPJ:</label>
-							<br/><input type="text" id="cnpj" name="cpnj" placeholder="CNPJ..."/>	
+							<br/><input type="text" id="cnpj" name="cpnj" placeholder="CNPJ..." th:field="*{cnpj}" th:classappend="${#fields.hasErrors('cnpj')} ? 'input-error' : ''"/>	
 							<br/><br/>
+							
+							<div id="error-message" th:if="${#fields.hasErrors('cnpj')}">
+								<span th:errors="*{cnpj}"></span>
+							</div>							
 	
 							<label for="email">E-mail:</label>
-							<br/><input type="text" id="email" name="email" placeholder="E-mail..."/>	
+							<br/><input type="text" id="email" name="email" placeholder="E-mail..." th:field="*{email}" th:classappend="${#fields.hasErrors('email')} ? 'input-error' : ''"/>	
 							<br/><br/>
+
+							<div id="error-message" th:if="${#fields.hasErrors('email')}">
+								<span th:errors="*{email}"></span>
+							</div>
 	
 							<label for="phone">Telefone:</label>
-							<br/><input type="text" id="phone" name="phone" placeholder="Telefone..."/>	
+							<br/><input type="text" id="phone" name="phone" placeholder="Telefone..." th:field="*{phone}" th:classappend="${#fields.hasErrors('phone')} ? 'input-error' : ''"/>	
 							<br/><br/>
-	
+
+							<div id="error-message" th:if="${#fields.hasErrors('phone')}">
+								<span th:errors="*{phone}"></span>
+							</div>
+								
 							<label for="cep">CEP:</label>
-							<br/><input type="text" id="cep" name="cep" placeholder="CEP..."/>	
+							<br/><input type="text" id="cep" name="cep" placeholder="CEP..." th:field="*{cep}" th:classappend="${#fields.hasErrors('cep')} ? 'input-error' : ''"/>	
 							<br/><br/>
-	
+
+							<div id="error-message" th:if="${#fields.hasErrors('cep')}">
+								<span th:errors="*{cep}"></span>
+							</div>
+							
 							<label for="category">Categoria de comida:</label>
 							<br/>
 							<select id="category" name="category">
@@ -42,16 +68,20 @@
 							</select>	
 							<br/><br/>
 	
-							<label for="logo">Logotipo:</label>
-							<br/><input type="file" id="logo" name="logo"/>	
+							<label for="logotipo">Logotipo:</label>
+							<br/><input type="file" id="logotipo" name="logotipo" th:field="*{logotipo}" th:classappend="${#fields.hasErrors('logotipo')} ? 'input-error' : ''"/>	
 							<br/><br/>
+							
+							<div id="error-message" th:if="${#fields.hasErrors('logotipo')}">
+								<span th:errors="*{logotipo}"></span>
+							</div>
 	
 							<label for="password">Senha:</label>
-							<br/><input type="password" id="password" name="password" placeholder="Senha..."/>	
+							<br/><input type="password" id="password" name="password" placeholder="Senha..." th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''"/>	
 							<br/><br/>
 	
-							<div id="error-message">
-								Aqui vai um exemplo de mensagem de erro
+							<div id="error-message" th:if="${#fields.hasErrors('password')}">
+								<span th:errors="*{password}"></span>
 							</div>
 	
 							<br/>
