Cadastros finalizados. Limitado tamanho request e file.

--- a/src/main/resources/templates/cliente-cadastro.html
+++ b/src/main/resources/templates/cliente-cadastro.html
@@ -80,7 +80,7 @@
 	
 				<br/>
 	
-				<input type="button" value="Voltar" onClick="location.href='index.html';"/>
+				<input type="button" value="Voltar" th:onClick="'location.href=\'' + @{/custumer/home} + '\';'"/>
 			</div>
 		</div>
 	</body>
