--- a/src/main/resources/templates/cliente-cadastro.html
+++ b/src/main/resources/templates/cliente-cadastro.html
@@ -71,7 +71,7 @@
 								</div>
 							</div>
 							
-							<input type="hidden" value="*" th:if="${isEditMode}"/>
+							<input type="hidden" value="*" name="password" th:if="${isEditMode}"/>
 	
 							<input type="submit" th:value="${!isEditMode} ? Cadastrar : Alterar"/>
 						</fieldset>
