--- a/src/main/resources/templates/restaurante-cadastro.html
+++ b/src/main/resources/templates/restaurante-cadastro.html
@@ -18,6 +18,9 @@
 				<div>
 					<form method="POST" th:object="${restaurant}" th:action="${!isEditMode} ? @{/public/restaurant/save} : @{/restaurant/save}" enctype="multipart/form-data">
 						<fieldset>
+						
+							<input type="hidden" th:field="*{id}"/>
+						
 							<label for="name">Nome do Restaurante:</label>
 							<br/><input type="text" id="name" name="name" placeholder="Nome..." th:field="*{name}" th:classappend="${#fields.hasErrors('name')} ? 'input-error' : ''"/>	
 							<br/><br/>
@@ -50,12 +53,12 @@
 								<span th:errors="*{phone}"></span>
 							</div>
 								
-							<label for="baseDeliveryRate">Taxa base de entrega:</label>
-							<br/><input type="text" id="baseDeliveryRate" name="baseDeliveryRate" placeholder="Taxa..." th:field="*{baseDeliveryRate}" th:classappend="${#fields.hasErrors('baseDeliveryRate')} ? 'input-error' : ''"/>	
+							<label for="deliveryRate">Taxa base de entrega:</label>
+							<br/><input type="text" id="deliveryRate" name="deliveryRate" placeholder="Taxa..." th:field="*{deliveryRate}" th:classappend="${#fields.hasErrors('deliveryRate')} ? 'input-error' : ''"/>	
 							<br/><br/>
 
-							<div id="error-message" th:if="${#fields.hasErrors('baseDeliveryRate')}">
-								<span th:errors="*{baseDeliveryRate}"></span>
+							<div id="error-message" th:if="${#fields.hasErrors('deliveryRate')}">
+								<span th:errors="*{deliveryRate}"></span>
 							</div>
 							
 							<label for="baseDeliveryTime">Tempo de entrega (min.):</label>
@@ -76,22 +79,26 @@
 							<div id="error-message" th:if="${#fields.hasErrors('categories')}">
 								<span th:errors="*{categories}"></span>
 							</div>
-	
-							<label for="logotipoFile">Logotipo:</label>
-							<br/><input type="file" id="logotipoFile" name="logotipoFile" th:field="*{logotipoFile}" th:classappend="${#fields.hasErrors('logotipoFile')} ? 'input-error' : ''"/>	
-							<br/><br/>
 							
-							<div id="error-message" th:if="${#fields.hasErrors('logotipoFile')}">
-								<span th:errors="*{logotipoFile}"></span>
+							<div th:if="${!isEditMode}">
+								<label for="logotipoFile">Logotipo:</label>
+								<br/><input type="file" id="logotipoFile" name="logotipoFile" th:field="*{logotipoFile}" th:classappend="${#fields.hasErrors('logotipoFile')} ? 'input-error' : ''"/>	
+								<br/><br/>
+								
+								<div id="error-message" th:if="${#fields.hasErrors('logotipoFile')}">
+									<span th:errors="*{logotipoFile}"></span>
+								</div>
+							
+								<label for="password">Senha:</label>
+								<br/><input type="password" id="password" name="password" placeholder="Senha..." th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''"/>	
+								<br/><br/>
+		
+								<div id="error-message" th:if="${#fields.hasErrors('password')}">
+									<span th:errors="*{password}"></span>
+								</div>
 							</div>
-	
-							<label for="password">Senha:</label>
-							<br/><input type="password" id="password" name="password" placeholder="Senha..." th:classappend="${#fields.hasErrors('password')} ? 'input-error' : ''"/>	
-							<br/><br/>
-	
-							<div id="error-message" th:if="${#fields.hasErrors('password')}">
-								<span th:errors="*{password}"></span>
-							</div>
+							
+							<input type="hidden" value="*" name="password" th:if="${isEditMode}"/>
 	
 							<br/>
 							
